# Hw01

./: .gitignore
Lesson 1/Task 1/: Source.cpp  Task 1.sln  Task 1.vcxproj
Lesson10/Task1/: CMakeLists.txt  Source.cpp
Lesson10/Task2/: CMakeLists.txt  Incorrect_params.cpp  class_Parallelogram.h  class_Quadrangle.h  class_Rhomb.cpp  class_Square.cpp  class_Square.h  main.cpp
Lesson11/Task1/: Task1.sln
Lesson11/Task2/: Task2.sln
Lesson11/Task3/: CMakeLists.txt  Leaver.cpp  Leaver.h  Task3.cpp
Lesson2/Task1/: Source.cpp  Task1.sln  Task1.vcxproj
Lesson2/Task2/: Source.cpp  Task2.sln  Task2.vcxproj
Lesson2/Task3/: Source.cpp  Task3.sln  Task3.vcxproj
Lesson3/Task1/: Source.cpp  Task1.sln  Task1.vcxproj
Lesson3/Task2/: Source.cpp  Task2.sln  Task2.vcxproj
Lesson4/Task1/: Task1.sln  Task1.vcxproj  main.cpp
Lesson4/Task2/: Task2.sln  Task2.vcxproj  main.cpp
Lesson5/Task1/: Task1.sln  Task1.vcxproj  main.cpp
Lesson5/Task2/: Task2.sln  Task2.vcxproj  main.cpp
Lesson5/Task3/: Task3.sln  Task3.vcxproj  main.cpp
Lesson6/Task1/: Task1.aps  Task1.sln  Task1.vcxproj  Task1.vcxproj.filters  main.cpp  math_functions.cpp  math_functions.h
Lesson6/Task2/: Task2.sln  Task2.vcxproj  Task2.vcxproj.filters  class_counter.cpp  class_counter.h  main.cpp
Lesson6/Task3/: Task3.vcxproj  Task3.vcxproj.filters  class_Equilateral_triangle.cpp  class_Equilateral_triangle.h  class_Figure.h  class_Isosceles_triangle.cpp  class_Parallelogram.cpp  class_Quadrangle.cpp  class_Quadrangle.h  class_Right_triangle.cpp  class_Right_triangle.h  class_Triangle.cpp  main.cpp  (+1 more)
(+39 files in other folders)
