cmake_minimum_required(VERSION 3.22.0)
project(project_Figures)
add_executable(program_Figures main.cpp class_Figure.cpp class_Triangle.cpp class_Quadrangle.cpp class_Parallelogram.cpp class_Equilateral_triangle.cpp class_Isosceles_triangle.cpp class_Rectangle.cpp class_Rhomb.cpp class_Right_triangle.cpp class_Square.cpp Incorrect_params.cpp)